# firmware-idf

./: .gitignore  .gitmodules  CMakeLists.txt  ENDPOINTS.md  Justfile  README.md  flake.nix  sdkconfig.defaults  sdkconfig.old
esp/: esp32-toolchain.nix
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/include/: camera.h  display.h  http_client.h  img_icon.h  sensor.h  server.h  wifi.h
main/src/: camera.c  display.c  http_client.c  sensor.c  server.c  wifi.c
scripts/: convert_image.py
